<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#394264"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#00000000"
        android:orientation="vertical"
        android:paddingBottom="24dp" >

        <EditText
            android:id="@+id/editText_user"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:drawableLeft="@drawable/ic_email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/hind_email"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="#FFF"
            android:typeface="serif" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText_password"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:drawableLeft="@drawable/ic_key"
            android:drawableStart="@drawable/ic_key"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/hind_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="#FFF"
            android:typeface="serif" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp" >

            <CheckBox
                android:id="@+id/checkBox_keeplogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-6dp"
                android:layout_marginStart="-6dp"
                android:checked="true"
                android:text="@string/str_remember_me"
                android:textColor="#9099b7"
                android:typeface="serif"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:background="@drawable/button_style"
                    android:text="@string/str_signin"
                    android:textColor="#FFF"
                    android:textSize="12pt"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageButton_signinfb"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:background="#00000000"
            android:contentDescription="@string/des_imgfb"
            android:scaleType="center"
            android:src="@drawable/imgfb" />

        <ImageButton
            android:id="@+id/imageButton_signingg"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="#00000000"
            android:contentDescription="@string/des_imggg"
            android:scaleType="center"
            android:src="@drawable/imgg" />

        <ImageButton
            android:id="@+id/imageButton_signintt"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="#00000000"
            android:contentDescription="@string/des_imgtt"
            android:scaleType="center"
            android:src="@drawable/imgtt" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:gravity="center_horizontal"
        android:text="@string/str_sign_in_to_your_account"
        android:textColor="#FFF"
        android:textSize="12pt" />

</RelativeLayout>